[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI_themes/main_menu.tres" type="Theme" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/main_menu_background_placeholder.jpg" type="Texture" id=3]
[ext_resource path="res://assets/title.png" type="Texture" id=4]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TextureRectBackground" type="TextureRect" parent="."]
self_modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 3 )

[node name="Container" type="Container" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0
margin_bottom = -265.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="TextureRect" type="TextureRect" parent="Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = 100.0
texture = ExtResource( 4 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = -34.0
margin_right = 122.0
margin_bottom = 206.0
rect_min_size = Vector2( 128, 0 )
custom_constants/separation = 50

[node name="ButtonPlay" type="Button" parent="VBoxContainer"]
margin_right = 221.0
margin_bottom = 16.0
text = "Play"

[node name="ButtonSettings" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 221.0
margin_bottom = 82.0
text = "Settings"

[node name="ButtonExit" type="Button" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 221.0
margin_bottom = 148.0
text = "Exit"

[node name="MarginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -24.0

[node name="LabelVersion" type="Label" parent="MarginContainer"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
grow_horizontal = 0
text = "v 0_0_0"
align = 1
valign = 1

[connection signal="pressed" from="VBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSettings" to="." method="_on_ButtonSettings_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
